--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>계산기</title>
+  <title>간단한 계산기</title>
   <style>
     body {
       font-family: Arial, sans-serif;
